# ponderada_openmp

./: CMakeLists.txt  main.cpp
